// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiPage should match a snapshot for the /desktop page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ApiPage should match a snapshot for the /graphql page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ApiPage should match a snapshot for the /swagger page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ApiPage should match a snapshot for the /webhooks page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
          <button
            class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            Video
          </button>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
        <button
          class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
        >
          Video
        </button>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ApiPage should match a snapshot for the /webhooks/about page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
          <button
            class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            Video
          </button>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        >
          <div
            class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
          >
            <h1
              class="evblxhy-el-title"
            >
              Webhooks
            </h1>
          </div>
          <div
            class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
          >
            <div
              class="egmnxi3-el-tabs-options-wrap"
            >
              <input
                checked=""
                class="enkj6b-el-tabs"
                id="webhook-tab-about"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/about"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-about"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  About Webhooks
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-new"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/new"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-new"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Add Webhook
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-manage"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/manage"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-manage"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Manage Webhooks
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-logs"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/logs"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-logs"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Transaction Logs
                </span>
              </label>
            </div>
            <div
              class="e1147ynd-el-tabs-footer"
            />
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
        <button
          class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
        >
          Video
        </button>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      >
        <div
          class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            Webhooks
          </h1>
        </div>
        <div
          class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
        >
          <div
            class="egmnxi3-el-tabs-options-wrap"
          >
            <input
              checked=""
              class="enkj6b-el-tabs"
              id="webhook-tab-about"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/about"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-about"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                About Webhooks
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-new"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/new"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-new"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Add Webhook
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-manage"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/manage"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-manage"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Manage Webhooks
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-logs"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/logs"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-logs"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Transaction Logs
              </span>
            </label>
          </div>
          <div
            class="e1147ynd-el-tabs-footer"
          />
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ApiPage should match a snapshot for the /webhooks/logs page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
          <div
            class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
          >
            <div
              class="c1dc4ecv-controls-container"
            >
              <div
                class="iru95t9-input-full-width e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2019-04"
                  name="from"
                  type="date"
                  value="2019-10-10"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Date From
                </label>
              </div>
            </div>
            <div
              class="c1dc4ecv-controls-container"
            >
              <div
                class="iru95t9-input-full-width e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  max="2019-10-10"
                  min="2019-10-10"
                  name="to"
                  type="date"
                  value="2019-10-10"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Date To
                </label>
              </div>
            </div>
            <div
              class="c1dc4ecv-controls-container"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <select
                  class="e1yw9yco-el-wfull e60u3kb-el-select"
                  name="applicationId"
                >
                  <option
                    value=""
                  >
                    None selected
                  </option>
                  <option
                    value="MOCK_APP_ID"
                  >
                    MOCK_APP_NAME
                  </option>
                  <option
                    value="MOCK_OTHER_APP_ID"
                  >
                    MOCK_APP_NAME_ANOTHER
                  </option>
                </select>
                <label
                  class="e1nbkkrq-el-label"
                >
                  App Name
                </label>
              </div>
            </div>
          </div>
          <button
            class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            View Docs
          </button>
          <button
            class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            Video
          </button>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        >
          <div
            class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
          >
            <h1
              class="evblxhy-el-title"
            >
              Webhooks
            </h1>
          </div>
          <div
            class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
          >
            <div
              class="egmnxi3-el-tabs-options-wrap"
            >
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-about"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/about"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-about"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  About Webhooks
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-new"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/new"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-new"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Add Webhook
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-manage"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/manage"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-manage"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Manage Webhooks
                </span>
              </label>
              <input
                checked=""
                class="enkj6b-el-tabs"
                id="webhook-tab-logs"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/logs"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-logs"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Transaction Logs
                </span>
              </label>
            </div>
            <div
              class="e1147ynd-el-tabs-footer"
            />
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
        <div
          class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
        >
          <div
            class="c1dc4ecv-controls-container"
          >
            <div
              class="iru95t9-input-full-width e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2019-04"
                name="from"
                type="date"
                value="2019-10-10"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Date From
              </label>
            </div>
          </div>
          <div
            class="c1dc4ecv-controls-container"
          >
            <div
              class="iru95t9-input-full-width e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                max="2019-10-10"
                min="2019-10-10"
                name="to"
                type="date"
                value="2019-10-10"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Date To
              </label>
            </div>
          </div>
          <div
            class="c1dc4ecv-controls-container"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <select
                class="e1yw9yco-el-wfull e60u3kb-el-select"
                name="applicationId"
              >
                <option
                  value=""
                >
                  None selected
                </option>
                <option
                  value="MOCK_APP_ID"
                >
                  MOCK_APP_NAME
                </option>
                <option
                  value="MOCK_OTHER_APP_ID"
                >
                  MOCK_APP_NAME_ANOTHER
                </option>
              </select>
              <label
                class="e1nbkkrq-el-label"
              >
                App Name
              </label>
            </div>
          </div>
        </div>
        <button
          class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
        >
          View Docs
        </button>
        <button
          class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
        >
          Video
        </button>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      >
        <div
          class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            Webhooks
          </h1>
        </div>
        <div
          class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
        >
          <div
            class="egmnxi3-el-tabs-options-wrap"
          >
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-about"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/about"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-about"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                About Webhooks
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-new"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/new"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-new"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Add Webhook
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-manage"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/manage"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-manage"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Manage Webhooks
              </span>
            </label>
            <input
              checked=""
              class="enkj6b-el-tabs"
              id="webhook-tab-logs"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/logs"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-logs"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Transaction Logs
              </span>
            </label>
          </div>
          <div
            class="e1147ynd-el-tabs-footer"
          />
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ApiPage should match a snapshot for the /webhooks/manage page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
          <div
            class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
          >
            <div
              class="c1dc4ecv-controls-container"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <select
                  class="e1yw9yco-el-wfull e60u3kb-el-select"
                  name="applicationId"
                >
                  <option
                    value=""
                  >
                    None selected
                  </option>
                  <option
                    value="MOCK_APP_ID"
                  >
                    MOCK_APP_NAME
                  </option>
                  <option
                    value="MOCK_OTHER_APP_ID"
                  >
                    MOCK_APP_NAME_ANOTHER
                  </option>
                </select>
                <label
                  class="e1nbkkrq-el-label"
                >
                  App Name
                </label>
              </div>
            </div>
          </div>
          <button
            class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            View Docs
          </button>
          <button
            class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            Video
          </button>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        >
          <div
            class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
          >
            <h1
              class="evblxhy-el-title"
            >
              Webhooks
            </h1>
          </div>
          <div
            class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
          >
            <div
              class="egmnxi3-el-tabs-options-wrap"
            >
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-about"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/about"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-about"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  About Webhooks
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-new"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/new"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-new"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Add Webhook
                </span>
              </label>
              <input
                checked=""
                class="enkj6b-el-tabs"
                id="webhook-tab-manage"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/manage"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-manage"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Manage Webhooks
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-logs"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/logs"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-logs"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Transaction Logs
                </span>
              </label>
            </div>
            <div
              class="e1147ynd-el-tabs-footer"
            />
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
        <div
          class="e1v6agxr-el-border-radius o27jdjf-overflow-hidden ehvkknk-el-mb5"
        >
          <div
            class="c1dc4ecv-controls-container"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <select
                class="e1yw9yco-el-wfull e60u3kb-el-select"
                name="applicationId"
              >
                <option
                  value=""
                >
                  None selected
                </option>
                <option
                  value="MOCK_APP_ID"
                >
                  MOCK_APP_NAME
                </option>
                <option
                  value="MOCK_OTHER_APP_ID"
                >
                  MOCK_APP_NAME_ANOTHER
                </option>
              </select>
              <label
                class="e1nbkkrq-el-label"
              >
                App Name
              </label>
            </div>
          </div>
        </div>
        <button
          class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
        >
          View Docs
        </button>
        <button
          class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
        >
          Video
        </button>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      >
        <div
          class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            Webhooks
          </h1>
        </div>
        <div
          class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
        >
          <div
            class="egmnxi3-el-tabs-options-wrap"
          >
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-about"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/about"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-about"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                About Webhooks
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-new"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/new"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-new"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Add Webhook
              </span>
            </label>
            <input
              checked=""
              class="enkj6b-el-tabs"
              id="webhook-tab-manage"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/manage"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-manage"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Manage Webhooks
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-logs"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/logs"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-logs"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Transaction Logs
              </span>
            </label>
          </div>
          <div
            class="e1147ynd-el-tabs-footer"
          />
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ApiPage should match a snapshot for the /webhooks/new page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
      >
        <aside
          class="e93m1fg-el-secondary-nav-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            API
          </h1>
          <div
            class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
          >
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              REST API
            </div>
            <div
              class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
            >
              Webhooks
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              GraphQL
            </div>
            <div
              class="e1ohezfm-el-secondary-nav-item"
            >
              Desktop
            </div>
          </div>
          <button
            class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
          >
            Video
          </button>
        </aside>
        <section
          class="e12d7zo5-el-hfull eukst9x-el-page-container"
        >
          <div
            class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
          >
            <h1
              class="evblxhy-el-title"
            >
              Webhooks
            </h1>
          </div>
          <div
            class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
          >
            <div
              class="egmnxi3-el-tabs-options-wrap"
            >
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-about"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/about"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-about"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  About Webhooks
                </span>
              </label>
              <input
                checked=""
                class="enkj6b-el-tabs"
                id="webhook-tab-new"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/new"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-new"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Add Webhook
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-manage"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/manage"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-manage"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Manage Webhooks
                </span>
              </label>
              <input
                class="enkj6b-el-tabs"
                id="webhook-tab-logs"
                name="webhook-tabs"
                type="radio"
                value="/webhooks/logs"
              />
              <label
                class="e1ob8xkh-el-tabs-label"
                for="webhook-tab-logs"
              >
                <span
                  class="eulcr0n-el-tabs-item"
                >
                  Transaction Logs
                </span>
              </label>
            </div>
            <div
              class="e1147ynd-el-tabs-footer"
            />
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="eoxpwv-el-flex-auto e2kmzjs-el-flex-container"
    >
      <aside
        class="e93m1fg-el-secondary-nav-container"
      >
        <h1
          class="evblxhy-el-title"
        >
          API
        </h1>
        <div
          class="e1w1lp2k-el-mb9 e125gftx-el-secondary-nav"
        >
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            REST API
          </div>
          <div
            class="evmehgn-el-is-active e1ohezfm-el-secondary-nav-item"
          >
            Webhooks
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            GraphQL
          </div>
          <div
            class="e1ohezfm-el-secondary-nav-item"
          >
            Desktop
          </div>
        </div>
        <button
          class="ehvkknk-el-mb5 e1fle5tm-el-intent-neutral eqfkc7t-el-button"
        >
          Video
        </button>
      </aside>
      <section
        class="e12d7zo5-el-hfull eukst9x-el-page-container"
      >
        <div
          class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
        >
          <h1
            class="evblxhy-el-title"
          >
            Webhooks
          </h1>
        </div>
        <div
          class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
        >
          <div
            class="egmnxi3-el-tabs-options-wrap"
          >
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-about"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/about"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-about"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                About Webhooks
              </span>
            </label>
            <input
              checked=""
              class="enkj6b-el-tabs"
              id="webhook-tab-new"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/new"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-new"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Add Webhook
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-manage"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/manage"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-manage"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Manage Webhooks
              </span>
            </label>
            <input
              class="enkj6b-el-tabs"
              id="webhook-tab-logs"
              name="webhook-tabs"
              type="radio"
              value="/webhooks/logs"
            />
            <label
              class="e1ob8xkh-el-tabs-label"
              for="webhook-tab-logs"
            >
              <span
                class="eulcr0n-el-tabs-item"
              >
                Transaction Logs
              </span>
            </label>
          </div>
          <div
            class="e1147ynd-el-tabs-footer"
          />
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
